fixed footer, transform:translate portfolio-index images & footer-left offscreen

--- a/_sass/_default.scss
+++ b/_sass/_default.scss
@@ -1,7 +1,12 @@
+
+
 body {
   font-family: "Helvetica Neue", sans-serif;
   margin: 0;
   min-width: $small-screen;
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
 }
 
 a,
@@ -18,10 +23,21 @@ a:hover {
 .main-content {
   @include outer-container;
   padding: 0 $padding-body-margin-replacement;
+  flex: 1
 }
 
 .linkset {
   list-style-type: none;
   text-align: center;
   padding-left: 0;
+}
+
+.wrapper-transform-assistant {
+  position: relative;
+  overflow: hidden;
+  height: 100%;
+}
+
+.transform-animate {
+  position: absolute;
 }
