--- a/_sass/_settings.scss
+++ b/_sass/_settings.scss
@@ -18,3 +18,4 @@ $footer-child-padding: 10px;
 
 // animations & transitions
 $common-transition: 0.3s;
+$offscreen-transition: 0.5s ease;
